@@ -244,7 +244,7 @@ bool RipNg::RouteInput (Ptr<const Packet> p, const Ipv6Header &header, Ptr<const
         {
           ecb (p, header, Socket::ERROR_NOROUTETOHOST);
         }
-      return false;
+      return true;
     }
   // Next, try to find a route
   NS_LOG_LOGIC ("Unicast destination");
